--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/throttler": "^6.2.1",
     "@nestjs/typeorm": "^10.0.2",
+    "body-parser": "^1.20.3",
     "class-transformer": "^0.5.1",
     "helmet": "^8.0.0",
     "joi": "^17.13.3",
